[gd_scene load_steps=28 format=2]

[ext_resource path="res://engine_tutorial.gd" type="Script" id=1]
[ext_resource path="res://assets/geelboot.png" type="Texture" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://assets/engine.ogg" type="AudioStream" id=4]
[ext_resource path="res://BowSplashParticleMat.tres" type="Material" id=5]
[ext_resource path="res://assets/witboot.png" type="Texture" id=6]
[ext_resource path="res://assets/groenboot.png" type="Texture" id=7]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 21 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "boost",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "sunk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 21 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "boost",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "sunk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 16, 21 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "boost",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "sunk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 6.47775
height = 7.39357

[node name="dinghy_tutorial" type="Node2D"]
z_index = 10

[node name="body" type="RigidBody2D" parent="."]
mass = 3.1
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
linear_damp = 1.5
angular_damp = 3.86
script = ExtResource( 1 )

[node name="BoatWhite" type="AnimatedSprite" parent="body"]
visible = false
frames = SubResource( 7 )
animation = "left"

[node name="BoatYellow" type="AnimatedSprite" parent="body"]
visible = false
frames = SubResource( 13 )
animation = "right"

[node name="BoatGreen" type="AnimatedSprite" parent="body"]
visible = false
frames = SubResource( 19 )
animation = "sunk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 20 )

[node name="Camera2D" type="Camera2D" parent="body"]
current = true
script = ExtResource( 3 )

[node name="BowSplash" type="Particles2D" parent="body"]
position = Vector2( -6.294, -11.206 )
scale = Vector2( 1.149, 0.993 )
z_index = -1
amount = 100
lifetime = 0.2
process_material = ExtResource( 5 )

[node name="EngineSound" type="AudioStreamPlayer2D" parent="body"]
stream = ExtResource( 4 )
autoplay = true
[connection signal="body_entered" from="body" to="body" method="_on_body_body_entered"]
